# automagik-spark

./: .aidigestignore  .coverage  .env.dev  .env.example  .gitignore  .mcp.json  .python-version  .windsurfrules  ADAPTER_IMPLEMENTATION_SUMMARY.md  API_DOCUMENTATION.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MULTI_SOURCE_ARCHITECTURE.md  Makefile  README.md  RELEASE_NOTES.md  RELEASE_QUICKSTART.md  TODO.md  VERSION_BUMP.md  alembic.ini  apply_fix.py  apply_fix.sh  codebase.md  current_task.md  debug_base.py  debug_imports.py  debug_lazy_vs_fixture.py  debug_test.py  debug_test_database.py  direct_fix.py  docker-compose.yml  ecosystem.config.js  ecosystem.config.js.backup  execute_fix.py  fix_hive_api_format.py  fix_mypy.py  fix_pydantic_signatures.py  output.txt  (+23 more)
.claude/: automagik_spark_instructions.md
agents/: README.md  models.py  requirements.txt  setup.py
alembic/: env.py
automagik/: __init__.py  __main__.py  version.py
automagik_new/: __main__.py
automagik_spark/: __init__.py  version.py
cli/: alembic.ini  cli.py  setup.py  task_runner.py
core/: __init__.py
docker/: Dockerfile  Dockerfile.api  Dockerfile.worker  codebase.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh
docs/: API.md  ARCHITECTURE.md  CLI.md  CLI_EXAMPLES.md  DEVELOPMENT.md  SETUP.md
genie/: automagik-hive-api-doc.md
instructions/: COMMON_PATTERNS.md  DEVELOPMENT_WORKFLOW.md  codebase.md  instructions.md  testing_guide.md  testing_guidelines.md
migrations/: env.py
scripts/: docker-compose.prod.yml  reset_db.sh  (+5 more)
(+308 files in other folders)
