[project]
name = "automagik"
version = "0.1.0"
description = "AutoMagik - Automated workflow management with LangFlow integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click",
    "alembic",
    "sqlalchemy",
    "psycopg2-binary",
    "redis",
    "aiohttp",
    "pydantic",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli/automagik_cli", "core"]
