[project]
name = "automagik"
version = "0.1.0"
description = "AutoMagik - Automated workflow management with LangFlow integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click",
    "alembic",
    "sqlalchemy",
    "psycopg2-binary",
    "redis",
    "aiohttp",
    "pydantic",
    "python-dotenv",
    "pytz",
    "croniter",
    "httpx",
    "tabulate",
    "setuptools",
    "asyncpg>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli/automagik_cli", "core"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
